fix(gradiant): SKFP-1285 remove double scrollbar

--- a/src/components/uiKit/GradientAccent/index.module.css
+++ b/src/components/uiKit/GradientAccent/index.module.css
@@ -8,5 +8,5 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1001;
 }
